--- a/BookReviewsBackend/BookReviewsBackend.Web/appsettings.json
+++ b/BookReviewsBackend/BookReviewsBackend.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-C7H8J49\\SQLEXPRESS;Initial Catalog=BookReviews;User Id=sa;Password=Enosis123;Integrated Security=false;"
+  }
 }
